# VacMonServer

./: .gitignore  CMakeLists.txt  README.md
Monitor/: 3rdpartylicenses.txt  index.html  main-es2015.06130a0dc4d2b0b05670.js  main-es2015.5605babbad9ac5bb9ac3.js  main-es2015.7638beb563fbf51937d7.js  main-es2015.82de49fbb7580027006c.js  main-es2015.a83d2a8b10fb37c18b7f.js  main-es2015.f64afe0812187294138f.js  main-es2015.fa72f1b83468b2da61d4.js  main-es5.29bec2745e7eab230a93.js  main-es5.3c481e504695190c8243.js  main-es5.82de49fbb7580027006c.js  main-es5.87fcf670c5cf737aaf87.js  main-es5.97345ac10291c9d07dc4.js  main-es5.a512ab4a88152f6e67a9.js  main-es5.c4bee58f84d59aa6e318.js
src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
src/controller/: MyController.hpp
src/db/: TDBHandler.cpp  TDBHandler.hpp
src/dto/: DTOs.hpp
utility/: install-oatpp-modules.sh
